progress in mongo db impl
