# src/main/resources/api.yaml
@@ -16,14 +16,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Question'
+              $ref: '#/components/schemas/QuestionFull'
       responses:
         '201':
           description: Created - Cookie / Header contains game state
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Question'
+                $ref: '#/components/schemas/QuestionFull'
         '400':
           description: wrong schem
           content:
@@ -101,6 +101,24 @@ components: {
         }
       }
     },
+    QuestionFull: {
+      type: object,
+      properties: {
+        id: {
+          type: integer,
+          format: int64
+        },
+        description: {
+          type: string
+        },
+        options: {
+          type: array,
+          items: {
+            $ref: '#/components/schemas/AnswerOptionFull'
+          }
+        }
+      }
+    },
     Question: {
       type: object,
       properties: {
@@ -124,6 +142,21 @@ components: {
       properties: {
         chosenOption: {
           $ref: '#/components/schemas/AnswerOption'
+        }
+      }
+    },
+    AnswerOptionFull: {
+      type: object,
+      properties: {
+        id: {
+          type: integer,
+          format: int64
+        },
+        description: {
+          type: string
+        },
+        isCorrect: {
+          type: boolean
         }
       }
     },
